# fastapi-project-template

./: .env.example  .env.test  .gitignore  Dockerfile  FastApi Template.postman_collection.json  README.MD  docker-compose.yml  logging.ini  pyproject.toml  pytest.ini  setup.py  test_api.py  test_api.sh
alembic/: env.py
alembic/versions/: 001_initial_migration.py
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: setup_testdb.py
src/: main.py
src/auth/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/core/: config.py  database.py  middleware.py  security.py
src/posts/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_main.py  test_posts.py
